# Virgo

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
models/bundled/: sse50_pool_best_total_return_2024_metrics.json
src/virgo_trader/: __init__.py  main.py  train.py
src/virgo_trader/agent/: __init__.py  policy_network.py
src/virgo_trader/backtest/: __init__.py  runner.py
src/virgo_trader/cli/: __init__.py  backtest.py  download_data.py  pipeline.py
src/virgo_trader/configs/: hyperparameters.json
src/virgo_trader/data/: __init__.py  data_fetcher.py  dataset_builder.py  feature_cache.py  feature_engineer.py  sentiment_loader.py  stock_pools.py
src/virgo_trader/environment/: __init__.py  multi_asset_env.py  reward.py  trading_env.py
src/virgo_trader/news/: __init__.py  cli.py  config.py  historical_batches.py  label_with_deepseek.py  label_with_fomalhaut.py  models.py  pipeline.py  repository.py  state.py  targets.py  utils.py
src/virgo_trader/news/sources/: __init__.py  base.py  caixin.py  cninfo.py  eastmoney.py  sina.py  sina_corp.py  sina_feed.py  sse.py
src/virgo_trader/simulation/: __init__.py  sim_trader.py
src/virgo_trader/training/: __init__.py  optimize.py  pipeline.py
src/virgo_trader/ui/: __init__.py  dashboard.py  kline_chart.py  styled_message_box.py
src/virgo_trader/ui/chat/: __init__.py  adaptive_input.py  chat_widget.py  code_block_widget.py  history_sidebar.py  message_bubble.py
src/virgo_trader/ui/styles/: dark_theme.qss
src/virgo_trader/utils/: __init__.py  chat_history_manager.py  database_manager.py  deepseek_client.py  early_stopping.py  email_notifier.py  instruction_executor.py  logging_utils.py  normalizer.py  paths.py  performance_metrics.py  q_logger.py  sb3_compat.py  worker.py
tests/: conftest.py  test_early_stopping.py  test_feature_cache.py  test_performance_metrics.py  test_reward.py  test_sentiment_loader.py
